--- a/fort-asset-service/src/main/resources/bootstrap.yml
+++ b/fort-asset-service/src/main/resources/bootstrap.yml
@@ -29,6 +29,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery:Cl0vdsec.eureka@localhost:8761/eureka/
+ribbon:
+  ConnectTimeout: 180000 # 连接超时时间(ms)
+  ReadTimeout: 180000 # 通信超时时间(ms)
 feign:
   client:
     config:
@@ -43,4 +46,6 @@ hystrix:
     default:
       execution:
         isolation:
+          thread:
+            timeoutInMilliseconds: 180000 # 熔断超时时长：180000ms
           strategy: SEMAPHORE
